<resources>
    <string name="app_name">Labserve</string>
    <string name="usergreeting">Welcome, User </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">New here? Register</string>
    <string name="findLabs">Find labs near me</string>
    <string name="reserveLab">Reserve a lab</string>
    <string name="reservationsLab">Check my reservations</string>
    <string name="title">Labserve</string>
    <string name="name">Name</string>
    <string name="faculty">I am faculty</string>
    <string name="cancel">Cancel</string>
    <string name="signup">Register</string>
    <string name="signing">Sign Up</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_contact">Contact Us</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="about">Check whether or not a lab is free and reserve a lab if you are faculty</string>
    <string name="contactUs">Contact us at b00069562@aus.edu or g00071143@aus.edu</string>
    <string name="notfications_summary">Do you want reminders about your reservations?</string>
    <string name="Notifications">Notifications reminder</string>
    <string name="notification_timing">Notification Timing</string>
    <string name="frequency_summary">When do you want to be reminded about your reservation?</string>
    <string name="labNo">ESB 1043</string>
    <string name="buildingName">Engineering and Science Building</string>
    <string name="lab_name">ESB 1043</string>
    <string name="lab_building">Engineering and Science Building</string>
    <string name="lab_availability">Available</string>
    <string name="sunSched">Sunday timings...</string>
    <string name="monSched" />
    <string name="tueSched">Tuesday schedule...</string>
    <string name="wedSched">Wednesday Schedule..</string>
    <string name="thurSched">Thursday Schedule...</string>
    <string-array name="frequency_keys">
        <item>5 minutes before</item>
        <item>10 minutes before</item>
        <item>15 minutes before</item>
    </string-array>
    <string-array name="frequency_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="reserveLabName">ESB 1043</string>
    <string name="reservationLabBuilding">Engineering and Science Building</string>
    <string name="confirmReservation" />

</resources>
