<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/menu_help"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />
</menu>
