<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#15dfe6e9"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:paddingLeft="15dp"
        android:text="S H O W I N G   W E E K L Y   S C H E D U L E"
        android:textSize="14sp" />

    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:text="Sunday"
        android:textColor="#2d3436"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/sunSched"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_corner_bottom"
        android:fontFamily="sans-serif-light"
        android:paddingLeft="15dp"
        android:paddingBottom="10dp"
        android:text="@string/sunSched"
        android:textColor="#2d3436"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:text="Monday"
        android:textColor="#2d3436"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/monSched"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_corner_bottom"
        android:fontFamily="sans-serif-light"
        android:paddingLeft="15dp"
        android:paddingBottom="10dp"
        android:text="@string/monSched"
        android:textColor="#2d3436"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:text="Tuesday"
        android:textColor="#2d3436"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tueSched"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_corner_bottom"
        android:fontFamily="sans-serif-light"
        android:paddingLeft="15dp"
        android:paddingBottom="10dp"
        android:text="@string/tueSched"
        android:textColor="#2d3436"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:text="Wednesday"
        android:textColor="#2d3436"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/wedSched"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_corner_bottom"
        android:fontFamily="sans-serif-light"
        android:paddingLeft="15dp"
        android:paddingBottom="10dp"
        android:text="@string/wedSched"
        android:textColor="#2d3436"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:text="Thursday"
        android:textColor="#2d3436"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/thurSched"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_corner_bottom"
        android:fontFamily="sans-serif-light"
        android:paddingLeft="15dp"
        android:paddingBottom="10dp"
        android:text="@string/thurSched"
        android:textColor="#2d3436"
        android:textSize="16sp" />

</LinearLayout>