<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:paddingLeft="15dp"
        android:text="R E S E R V I N G  L A B" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="15dp"
            android:text="Lab name:"
            android:textColor="#2d3436"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/reservationLabName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="15dp"
            android:text="@string/reserveLabName"
            android:textColor="#2d3436"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="15dp"
            android:text="Lab building:"
            android:textColor="#2d3436"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/reservationLabBuilding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="15dp"
            android:text="@string/reservationLabBuilding"
            android:textColor="#2d3436"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-light"
            android:paddingLeft="15dp"
            android:text="Reservation: "
            android:textColor="#2d3436"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/confirmReservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="15dp"
            android:text="@string/confirmReservation"
            android:textColor="#00b894"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="15dp"
            android:text="Choose your day and time of reservation"
            android:textColor="#2d3436"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sunButton"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/shape3"
            android:fontFamily="sans-serif-light"
            android:radius="50dp"
            android:stateListAnimator="@null"
            android:text="Sun" />

        <Button
            android:id="@+id/monButton"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/shape3"
            android:fontFamily="sans-serif-light"
            android:radius="50dp"
            android:stateListAnimator="@null"
            android:text="Mon" />

        <Button
            android:id="@+id/tueButton"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/shape3"
            android:fontFamily="sans-serif-light"
            android:radius="50dp"
            android:stateListAnimator="@null"
            android:text="Tue" />

        <Button
            android:id="@+id/wedButton"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/shape3"
            android:fontFamily="sans-serif-light"
            android:radius="50dp"
            android:stateListAnimator="@null"
            android:text="Wed" />

        <Button
            android:id="@+id/thurButton"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/shape3"
            android:fontFamily="sans-serif-light"
            android:radius="50dp"
            android:stateListAnimator="@null"
            android:text="Thur" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/reservationListView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:divider="@null">

        </ListView>

        <Button
            android:id="@+id/reserveButton"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/shape2"
            android:fontFamily="sans-serif-light"
            android:radius="50dp"
            android:stateListAnimator="@null"
            android:text="Make Reservation" />

    </LinearLayout>

</LinearLayout>